data/all_generated_tests/raw_wast_tests/call_ImproperFunctionCallorReturnHandling_3679.wast
;; 8. **Test Large Numbers of Arguments and Returns**:    - Call a function with a large number of arguments and inspect if the stack management is correct during push and pop operations.    - **Constraint**: Efficient stack usage without overflow for multiple arguments/returns.    - **Improper Call Handling**: Could corrupt the stack if not correctly managed.

(assert_invalid
  (module
    (type (func (param i32 i32 i32 i32 i32 i32 i32 i32 i32 i32 i32 i32 i32 i32 i32 i32 i32 i32 i32 i32)))
    (func $many-args-returns (call 0 (i32.const 1) (i32.const 2) (i32.const 3) (i32.const 4) (i32.const 5) (i32.const 6) (i32.const 7) (i32.const 8) (i32.const 9) (i32.const 10) (i32.const 11) (i32.const 12) (i32.const 13) (i32.const 14) (i32.const 15) (i32.const 16) (i32.const 17) (i32.const 18) (i32.const 19)))
  )
  "type mismatch"
)